Fix banner wrapping

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -1169,7 +1169,7 @@ div.box.box1 {
     font-weight: normal;
 }
 
-@media (max-width:768px) {
+@media (max-width: 700px) {
     .navbar-brand {
         width:70vw!important;
     }
